vuejs/vuejs-tests/testData/libraries/nuxt/highlighting/nuxtAutoImports/app.vue
<script lang="ts">
useHead<error descr="Invalid number of arguments, expected 1">()</error>;
</script>

<template>
  <div>
    {{<weak_warning descr="Invalid number of arguments, expected 1">useHead</weak_warning>()}}
    <h1>Hello</h1>
  </div>
</template>